Per project cmake list distinction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,21 @@ message("Target : ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}")
 message("Host   : ${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR}")
 
 # Allow the users to configure which rotten projects are built
-option(ROTTEN_PROJECT_EXAMPLES           "Build the rotten examples for all projecsts" ON)
-option(ROTTEN_PROJECT_GFX                "Build the rotten graphics abstraction layer" ON)
-option(ROTTEN_PROJECT_GFX_VK             "Build the rotten graphics vulkan helpers" ON)
-option(ROTTEN_PROJECT_RETRO_GFX_EXAMPLES "Build the rotten retro graphics api examples" ON)
-option(ROTTEN_PROJECT_RETRO_GFX_SIM      "Build the rotten graphics simulators for retro apis" ON)
+option(ROTTEN_PROJECT_EXAMPLES "Build the rotten examples for all projecsts" ON)
+option(ROTTEN_PROJECT_GFX      "Build the rotten graphics abstraction layer" ON)
+option(ROTTEN_PROJECT_GFX_VK   "Build the rotten graphics vulkan helpers" ON)
+
+# Which graphics retro simulators to build - None of them will build when the
+# rotten_retro_target cmake variable is defined because you're targetting native
+# retro machines / emulators and not a desktop.
+option(ROTTEN_PROJECT_RETRO_GFX_SIM_WII  "Build the graphics simulators for wii" ON)
+option(ROTTEN_PROJECT_RETRO_GFX_SIM_CUBE "Build the graphics simulators for gamecube" ON)
+if(${ROTTEN_PROJECT_RETRO_GFX_SIM_CUBE} OR ${ROTTEN_PROJECT_RETRO_GFX_SIM_WII})
+	set(ROTTEN_PROJECT_RETRO_GFX_SIM_GEKKO ON CACHE BOOL "Build either wii or gamecube sim")
+endif()
+
+# Enable the compile commands.json to be automatically generated
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "" FORCE)
 
 # Jump into the source directory to add in all of the different subprojects
 add_subdirectory(src)
