Add in rotten core project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@
 ############################################################################
 
 set(rotten_projects
+	rotten-core
 	rotten-gfx
 	rotten-gfx-vk
 	rotten-retro-gfx-examples
