--- a/src/rotten-core/CMakeLists.txt
+++ b/src/rotten-core/CMakeLists.txt
@@ -14,12 +14,19 @@ if(TARGET rotten-core)
 endif()
 
 # Define the rotten core project
-project(rotten-core VERSION 0.1.0 LANGUAGES CXX C)
+project(rotten-core VERSION 0.1.0 LANGUAGES C)
 message(STATUS "Adding rotten core")
 add_library(rotten-core
 	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten/rotten-core.h
+	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten/rotten-enum.h
 	${CMAKE_CURRENT_LIST_DIR}/src/rotten-core-internal.h
 	${CMAKE_CURRENT_LIST_DIR}/src/log.c)
 
 target_include_directories(rotten-core PUBLIC 
 	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten)
+
+set_target_properties(rotten-core PROPERTIES LINKER_LANGUAGE C)
+
+if(${ROTTEN_PROJECT_EXAMPLES})
+	add_subdirectory(src/examples)
+endif()
