Move gekko out of a pointless extra src directory
It can be reasonably infered that the graphics api will hold it's own examples, so there's no need to have a per api folder with src/sim src/examples

--- a/src/rotten-retro/gekko/examples/CMakeLists.txt
+++ b/src/rotten-retro/gekko/examples/CMakeLists.txt
@@ -27,7 +27,7 @@ if(NOT DEFINED rotten_retro_target)
 		rotten-retro-gekko-01-clear-color)
 
 	foreach(example ${gekko_examples})
-		target_link_libraries(${example} PRIVATE rotten-retro-gfx-sim-gekko)
+		target_link_libraries(${example} PRIVATE rotten-retro-gekko-sim)
 		set_target_properties(${example} PROPERTIES FOLDER "rotten/examples")
 	endforeach()
 
