New source tree guidelines with no nested 'src' directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,10 +27,11 @@ message("Target : ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}")
 message("Host   : ${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR}")
 
 # Allow the users to configure which rotten projects are built
-option(ROTTEN_PROJECT_EXAMPLES "Build the rotten examples for all projecsts" ON)
-option(ROTTEN_PROJECT_GFX      "Build the rotten graphics abstraction layer" ON)
-option(ROTTEN_PROJECT_GFX_VK   "Build the rotten graphics vulkan helpers" ON)
-option(ROTTEN_PROJECT_RETRO    "Build the rotten retro targets" ON)
+option(ROTTEN_PROJECT_EXAMPLES  "Build the rotten examples for all projecsts" ON)
+option(ROTTEN_PROJECT_GFX       "Build the rotten graphics abstraction layer" ON)
+option(ROTTEN_PROJECT_RETRO     "Build the rotten retro targets" ON)
+option(ROTTEN_PROJECT_VK_BOTTOM "Build the rotten vulkan low level helpers" ON)
+option(ROTTEN_PROJECT_VK_TOP    "Build the rotten vulkan high level helpers" ON)
 
 # Enable the compile commands.json to be automatically generated
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "" FORCE)
