--- a/src/rotten-window/CMakeLists.txt
+++ b/src/rotten-window/CMakeLists.txt
@@ -5,7 +5,6 @@
 # Copyrite : Rotten
 # Authors  : Lawrence G,
 ############################################################################
-
 cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
 if(TARGET rotten-window OR NOT ${ROTTEN_PROJECT_WINDOW})
 	return()
@@ -17,6 +16,7 @@ add_library(rotten-window
 	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten/rotten-window.h
 	init/connect.c
 	init/window-init.c
+	init/show.c
 	events/poll.c)
 
 # Add in rotten core
@@ -24,6 +24,22 @@ add_subdirectory(../rotten-core core)
 target_link_libraries(rotten-window PRIVATE rotten-core)
 target_include_directories(rotten-window PUBLIC 
 	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten)
+
+# Add in the windowing system loaders for linux. Each individual windowing system can be 
+# excluded, if they have been excluded then set the corrosponding compile definition
+add_subdirectory(../rotten-xcb xcb)
+add_subdirectory(../rotten-wayland wayland)
+if(TARGET rotten-xcb)
+	target_link_libraries(rotten-window PUBLIC rotten-xcb)
+else()
+	target_compile_definitions(rotten-window PRIVATE ROTTEN_WINDOW_EXCLUDE_XCB)
+endif()
+
+if(TARGET rotten-wayland)
+	target_link_libraries(rotten-window PUBLIC rotten-wayland)
+else()
+	target_compile_definitions(rotten-window PRIVATE ROTTEN_WINDOW_EXCLUDE_WAYLAND)
+endif()
 
 # Add the examples directory 
 if(${ROTTEN_PROJECT_EXAMPLES})
