--- a/src/rotten-wayland/CMakeLists.txt
+++ b/src/rotten-wayland/CMakeLists.txt
@@ -14,7 +14,8 @@ project(rotten-wayland VERSION 0.1.0 LANGUAGES C)
 message(STATUS "Adding rotten wayland loader")
 add_library(rotten-wayland
 	${CMAKE_CURRENT_LIST_DIR}/../../inc/rotten/rotten-wayland.h
-	wayland.c)
+	wayland.c
+	wl-inline-replacement.c)
 
 # Add in rotten core
 add_subdirectory(../rotten-core core)
