wayland: copy xdg.so to example dir

--- a/src/rotten-window/examples/CMakeLists.txt
+++ b/src/rotten-window/examples/CMakeLists.txt
@@ -19,4 +19,13 @@ set(examples
 foreach(example ${examples})
 	target_link_libraries(${example} PRIVATE rotten-window)
 	set_target_properties(${example} PROPERTIES FOLDER "rotten/examples")
+
+	# If the file has a rotten-wayland component then we need to copy the rotten-wayland-xdg
+	# shared library into the binary output directory of the example so it can be loaded at runtime
+	if(TARGET rotten-wayland-xdg)
+		add_custom_command(TARGET ${example} POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			"$<TARGET_FILE:rotten-wayland-xdg>"
+			"$<TARGET_FILE_DIR:${example}>")
+	endif()
 endforeach()
