wayland: attach xdg base ping pong

--- a/src/rotten-wayland-xdg/CMakeLists.txt
+++ b/src/rotten-wayland-xdg/CMakeLists.txt
@@ -62,7 +62,8 @@ add_library(rotten-wayland-xdg SHARED
 	
 	xdg/filler.c
 	xdg/xdg-interface.c
-	xdg/dispatch.c)
+	xdg/dispatch.c
+	xdg/listener.c)
 
 # Add the rotten-wayland-xdg header file to publish the functions
 target_include_directories(rotten-wayland-xdg PUBLIC 
